feat(amqp): improve amqp properties
fix standard headers


Change default amqp messages priority from 0 to 1.


add coments


fix npe